--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,5 @@
   "premissions":["tabs","storage"],
   "web_accessible_resources":["von.txt"],
   "manifest_version":2,
-  "version":"0.1",
+  "version":"0.1"
 }
